search number done

--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -303,7 +303,8 @@
     "Day":"星期",
     "Source":"来源",
     "DrawGap":"间隔期数",
-    "Utility":"效用"
+    "Utility":"效用",
+    "Please_select_Permutation":"请选择组合"
 
 
 }
