--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -305,7 +305,8 @@
     "Day":"Day",
     "Source":"Source",
     "DrawGap":"Draw Gap",
-    "Utility":"Utility"
+    "Utility":"Utility",
+    "Please_select_Permutation":"Please select Permutation"
 
 
 }
