fixed clear button and footer for cal new page

--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -22,8 +22,8 @@
     "Sr_No":"លេខរៀង",
     "Auto":"ស្វ័យប្រវត្ត",
     "Number":"ចំនួន",
-    "Big_Bet":"ការភ្នាល់ធំ",
-    "Small_Bet":"ការភ្នាល់តូច",
+    "Big_Bet":"ធំ",
+    "Small_Bet":"តូច",
     "Bet_Type":"ប្រភេទភ្នាល់",
     "Amount":"ចំនួនទឹកប្រាក់",
     "Total_Stake":"ភាគហ៊ុនសរុប",
