--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -309,7 +309,8 @@
     "Source":"来源",
     "DrawGap":"间隔期数",
     "Utility":"效用",
-    "Please_select_Permutation":"请选择组合"
+    "Please_select_Permutation":"请选择组合",
+    "LastDraw":"最后抽奖"
 
 
 }
