--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -308,7 +308,10 @@
     "DrawGap":"ចន្លោះថ្ងៃចាប់ឆ្នោត",
     "LastDraw":"ថ្ងៃចាប់ឆ្នោតចុងក្រោយ",
     "Utility":"ឧបករណ៍ប្រើប្រាស់",
-    "Please_select_Permutation":"សូមជ្រើសរើសការផ្លាស់ប្តូររបស់​លេខ"
+    "Please_select_Permutation":"សូមជ្រើសរើសការផ្លាស់ប្តូររបស់​លេខ",
+    "Yes":"បាទ",
+    "Not":"ទេ",
+    "Please_Enter_Bet_Number":"សូមបញ្ចូលលេខភ្នាល់"
 
     
 }
