--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -310,7 +310,10 @@
     "DrawGap":"间隔期数",
     "Utility":"效用",
     "Please_select_Permutation":"请选择组合",
-    "LastDraw":"最后抽奖"
+    "LastDraw":"最后抽奖",
+    "Yes":"是的",
+    "Not":"不",
+    "Please_Enter_Bet_Number":"请输入投注号码"
 
 
 }
