--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -311,8 +311,8 @@
     "Utility":"效用",
     "Please_select_Permutation":"请选择组合",
     "LastDraw":"最后抽奖",
-    "Yes":"是的",
-    "Not":"不",
+    "Yes":"是",
+    "Not":"否",
     "Please_Enter_Bet_Number":"请输入投注号码"
 
 
