--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -307,7 +307,7 @@
     "Source":"ប្រភព",
     "DrawGap":"ចន្លោះថ្ងៃចាប់ឆ្នោត",
     "LastDraw":"ថ្ងៃចាប់ឆ្នោតចុងក្រោយ",
-    "Utility":"ឧបករណ៍ប្រើប្រាស់",
+    "Utility":"ផ្នែកបន្ទាប់បន្សំ",
     "Please_select_Permutation":"សូមជ្រើសរើសការផ្លាស់ប្តូររបស់​លេខ",
     "Yes":"បាទ",
     "Not":"ទេ",
