--- a/pages/locales/de/transaltion.json
+++ b/pages/locales/de/transaltion.json
@@ -308,7 +308,7 @@
     "Day":"星期",
     "Source":"来源",
     "DrawGap":"间隔期数",
-    "Utility":"效用",
+    "Utility":"工具",
     "Please_select_Permutation":"请选择组合",
     "LastDraw":"最后抽奖",
     "Yes":"是",
