update betting page

--- a/pages/locales/en/transaltion.json
+++ b/pages/locales/en/transaltion.json
@@ -44,7 +44,7 @@
     "smalltext_lotto":"Lotteries",
     "Net_Amount":"Net Amount",
     "Total":"Total",
-    "Result":"Results",
+    "Result":"Draw Result",
     "Bet_Details":"Bet Details",
     "Success":"Success",
     "Winning_Amount":" Winning Amount",
