--- a/pages/locales/kh/transaltion.json
+++ b/pages/locales/kh/transaltion.json
@@ -311,7 +311,8 @@
     "Please_select_Permutation":"សូមជ្រើសរើសការផ្លាស់ប្តូររបស់​លេខ",
     "Yes":"បាទ",
     "Not":"ទេ",
-    "Please_Enter_Bet_Number":"សូមបញ្ចូលលេខភ្នាល់"
+    "Please_Enter_Bet_Number":"សូមបញ្ចូលលេខភ្នាល់",
+    "Total_Count":"ចំនូនរាប់សរុប"
 
     
 }
